--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ img{width: 100%;}
 .padding-tag{padding: 4.5em 0em;}
 /*Theme CSS*/
 /*CSS for Nav-Bar */
-#window_preload_mask{position: absolute;top: 0; left: 0;width: 100%; height: 100%;background-color: #000;overflow: hidden;color: #fff;}
+#window_preload_mask{position:fixed;top: 0; left: 0;width: 100%; height: 100%;background-color: #000;overflow: hidden;color: #fff;}
 .central-vh{position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%);}
 .navbar-modification{background-color: rgba(0,0,0,.2);border-color: transparent;height: 100px;padding: 22px;margin: 0 auto;}
 .navbar-brand{position:absolute;width: 100%;left: 0;text-align: center;margin: 0 auto;}
