--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,30 @@
-body{font-family: 'Playfair Display', serif;font-family: 'Montserrat', sans-serif;font-family: 'Raleway', sans-serif; margin: 0; width: 100%;}	
-.color-tag{color: #e59205;}
-img{width: 100%;}
-.sk-btn{background-color: #e59205;color: #fff; padding: 8px 18px;border: 2px solid #e59205; border-radius: 1px;font-weight: 700;}
+body{font-family: 'Playfair Display', serif; width: 100%;}	
+.color-tag{color: #e59205;}img{width: 100%;}
+.sk-btn, .sk-btn-2{background-color: #e59205;color: #fff; padding: 8px 18px;border: 2px solid #e59205; border-radius: 1px;font-weight: 700;}
 .sk-btn:hover{background-color:transparent;}
-.sk-btn-2{background-color: transparent;color: #6e7498;padding: 8px 18px;font-weight: 700;border: 2px solid #d9dcee;border-radius: 1px;}
+.sk-btn-2{background-color: transparent;color: #6e7498;border-color: #d9dcee;}
 .sk-btn-2:hover{background-color: #e59205; border-color:#e59205;}
-.title{position: relative; color: #6e7498;font-size: 40px;font-family: playfair display;font-style:italic;font-weight: 700;margin-bottom: 1em;}
-.title-detail{color: #a4a8bc; font-family: playfair display;}
+.title{position: relative; color: #6e7498;font-size: 40px;font-style:italic;font-weight: 700;margin-bottom: 1em;}
+.title-detail{color: #a4a8bc;}
 .line-1{width: 80%;border-bottom: 1px solid #e59205;margin-top: 3em; position: absolute;left: 60px;}
 .line-2{width: 80%;border-bottom: 1px solid #e59205;margin-top: 3em; position: absolute;right: 60px;}
 .padding-tag{padding: 4.5em 0em;}
 /*Theme CSS*/
-/*CSS for Nav-Bar */
+/*CSS for Nav-Bar Start */
 #window_preload_mask{position: fixed;top: 0; left: 0;width: 100%; height: 100%;background-color: gray;overflow: hidden;color: #fff; z-index: 10001;}
 .central-vh{position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%);}
-.affix {top: 0;width: 100%;}
+.navbar-modification.affix {top: 0;width: 100%;}
 .navbar-modification{background-color: rgba(0,0,0,.2);border-color: transparent;height: 100px;padding: 22px;margin: 0 auto;}
 .navbar-brand{position:absolute;width: 100%;left: 0;text-align: center;margin: 0 auto;}
-.navbar-default .navbar-brand{color: #e59205;font-size: 38px;font-family: playfair display;font-weight: 700;}
+.navbar-default .navbar-brand:hover{color: #e59205; cursor: pointer;}
+.navbar-default .navbar-brand{color: #e59205;font-size: 38px;font-weight: 700;}
 .navbar-left{position: absolute;left:15em}
 .navbar-right{position: absolute; right:19em;}
-.navbar-default .navbar-nav>li>a {color: #fff;font-size: 12px; font-family: raleway; font-weight: bold;}
+.navbar-default .navbar-nav>li>a {color: #fff;font-size: 12px; font-family: 'raleway'; font-weight: bold;}
 .navbar-default .navbar-nav>li>a:hover {color: #e59205;}
 .navbar-toggle {z-index:3;}
+.navbar-toggle {color: #e59205;}
+/*CSS for Nav-Bar End */
 .header-background{background-image: url(../images/header_bg.png); background-repeat: no-repeat;background-size: cover;background-position: center;}
 /*.header-background:after{
 	z-index: 1;
@@ -37,7 +39,7 @@ img{width: 100%;}
 /*Header Section Start*/
 .header-section{padding: 11em 0em;}
 .header-section h1{color: #fff;}
-.header-section p{color: #fff; font-size: 16px; font-family: raleway;}
+.header-section p{color: #fff; font-size: 16px; font-family: 'raleway';}
 .title span{color: #e59205;}
 .header-section .btn {color: #fff; margin-top: 2em; }
 /*Header Section End*/
@@ -45,19 +47,18 @@ img{width: 100%;}
 /*Start 1st Catagory*/
 .catagory p{margin: 2em auto;}
 .catagory .menu-btn button{width: 12%; margin: 30px 10px;}
-.price-tag{color: #e59205;font-size: 42px;font-family: playfair display;font-weight: 600;font-style: italic;}
+.price-tag{color: #e59205;font-size: 42px;font-weight: 600;font-style: italic;}
 .price-tag ~ h4{font-weight: bold; margin-top: 2em;}
-.detail{color:#a4a8bc;width:71%;margin:0 auto;font-family: playfair display;line-height: 2.4;margin-bottom: 2em;}
+.detail{color:#a4a8bc;width:71%;margin:0 auto;line-height: 2.4;margin-bottom: 2em;}
 .img-edit{width: 90%;margin:0 auto; margin-top:6em; }
 .lg-image{width: 70%; margin: 0 auto; margin-top:3em;}
 .img-edit button{padding: 6px;font-size: 12px; margin-top: 1em;}
 /*End 1st Catagory*/
 
 /*Start 3rd Catagory*/
-.menu-headline{color: #6e7498; font-family: playfair display; font-weight: 600; margin-bottom: 1em;}
-.menu-headline-detail{color: #c6c9d5; line-height: 2; margin-bottom: 2em;}
+.menu-headline{color: #6e7498;font-weight: 600; margin-bottom: 1em;}
+.menu-headline-detail{color: #c6c9d5; line-height: 2; margin-bottom: 2em; padding: 12px;}
 .img-editor{width: 20%;margin: 0 auto; height: 50px;margin-top: 4em;}
-
 /*End 3rd Catagory*/
 
 /*Check Our Breakfast Start*/
@@ -77,32 +78,80 @@ img{width: 100%;}
 footer{padding: 2em 0em; color: #a4a8bc;}
 footer ul{text-align: right;}
 ul a{color: #a4a8bc; text-decoration: none; font-weight: 600;}
+ul li a:hover{text-decoration: none;}
 
-@media (min-width: 320px) and (max-width: 480px) { 
+@media (min-width: 320px) and (max-width: 480px) {
+	/*Gobal CSS Start*/
 	.title{font-size: 24px;margin-bottom: 1em;}
 	.title-detail br{display: none;}
+	.line-1, .line-2{display: none;}
+	/*Gobal CSS End*/
+
+	/*Start 1st Catagory*/
 	.navbar-left{position: absolute;left:3em}
 	.navbar-right{position: absolute; right:3em;}
+
+	/*Header Section Start*/
 	.header-section p br{display: none;}
-	.line-1, .line-2{display: none;}
+	/*Header Section Start*/
+
+	/*Start 1st Catagory*/
 	.catagory p br{display: none;}
 	.catagory .menu-btn button{width: 55%; margin: 5px 0px;}
 	.lg-image{width: 80%; margin: 0 auto; margin-top:3em;}
+	/*Start 1st Catagory*/
+
+	/*Check Our Breakfast Start*/
 	.breakfast{height: auto; background-color: #e59205;}
 	.breakfast-color{padding:0px;text-align:center; font-size: 24px;}
 	.breakfast-img img{height: auto;}
+	/*Check Our Breakfast End*/
+
+	/*Start 3rd Catagory*/
 	.img-editor{width: 30%;margin: 0 auto; height:auto;margin-top: 1em;}
 	.menu-headline{margin-bottom: 10px; font-size: 18px;}
 	.menu-headline-detail{ margin-bottom: 2.5em;}
+	/*3rd Catagory End*/
+
+	/*Contact Start*/
 	.contact input{width: 80%;}
+	/*Contact End*/
+
 	footer ul{text-align: center;}
 	footer h5{font-size: 12px;}
+	footer ul li{font-size: 12px;}
  }
 @media (min-width: 481px) and (max-width: 800px) { 
+	/*Gobal CSS Start*/
 	.line-1{width: 60%;}
 	.line-2{width: 60%}
-	.catagory .menu-btn button{width: 20%;}
+	.title-detail br{display: none;}
 	.navbar-left{position: absolute;left:8em}
 	.navbar-right{position: absolute; right:11.5em;}
+	/*Gobal CSS End*/
+
+	/*Start 1st Catagory*/
+	.catagory .menu-btn button{width: 20%;}
+	/*1st Catagory End*/
+
+	/*Start 3rd Catagory*/
+	.menu-headline-detail{padding: 10px;}
+	/*3rd Catagory End*/
+
+	/*Check Our Breakfast Start*/
 	.breakfast-color{padding:10px;text-align:center;}
+	/*Check Our Breakfast End*/
 }
+
+@media (min-width: 1140px) and (max-width: 1440px ){
+	/*Navbar Section Start*/
+	.navbar-left{left:31em}
+	.navbar-right{right:35em;}
+	/*End Navbar Section*/
+	/*Start 1st Catagory*/
+	.line-1{width: 100%; left: 7em;}
+	.line-2{width: 100%;right: 7em;}
+	/*1st Catagory End*/
+
+}
+
